[gd_scene load_steps=9 format=3 uid="uid://ci6mgpkqpbx3"]

[ext_resource type="Script" path="res://Scripts/settings_menu.gd" id="1_3sos5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qvcsp"]
bg_color = Color(0.725268, 0.816892, 0.998348, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f53t1"]
bg_color = Color(0.917647, 0.823529, 0.686275, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.0755101, 0.0755101, 0.07551, 1)
corner_radius_bottom_right = 35
shadow_size = 20
shadow_offset = Vector2(20, 20)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0a8gb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_30wb6"]
bg_color = Color(0.783535, 0.645886, 0.434061, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t6yvs"]
bg_color = Color(0.632887, 0.506738, 0.309443, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xnp2x"]
bg_color = Color(0.917218, 0.823696, 0.68446, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o78u0"]
bg_color = Color(0.917647, 0.823529, 0.686275, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.0745098, 0.0745098, 0.0745098, 1)
corner_radius_bottom_left = 35
shadow_size = 20
shadow_offset = Vector2(-20, 20)

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3sos5")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qvcsp")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -150.0
offset_right = 400.0
offset_bottom = 150.0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_f53t1")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Audio Settings:"

[node name="Label2" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Music Volume:"

[node name="Volume" type="HSlider" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
max_value = 1.0
step = 0.05

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -55.5
offset_right = 55.5
offset_bottom = 23.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Settings Menu"

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -35.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_0a8gb")
theme_override_styles/hover = SubResource("StyleBoxFlat_30wb6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_t6yvs")
theme_override_styles/normal = SubResource("StyleBoxFlat_xnp2x")
text = "Back"

[node name="PanelContainer2" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -150.0
offset_bottom = 150.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_o78u0")

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer2"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Label" type="Label" parent="PanelContainer2/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Graphic Settings:"

[node name="Label2" type="Label" parent="PanelContainer2/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Choose Resolution:"

[node name="Resolutions" type="OptionButton" parent="PanelContainer2/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 20

[node name="Label3" type="Label" parent="PanelContainer2/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Window Mode:"

[node name="WindowMode" type="OptionButton" parent="PanelContainer2/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 20

[connection signal="value_changed" from="PanelContainer/VBoxContainer/Volume" to="." method="_on_volume_value_changed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="item_selected" from="PanelContainer2/VBoxContainer2/Resolutions" to="." method="_on_resolutions_item_selected"]
[connection signal="item_selected" from="PanelContainer2/VBoxContainer2/WindowMode" to="." method="_on_window_mode_item_selected"]
